text overflow problem fixing

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -2,7 +2,7 @@
     background-color: #2394df;
     height: 100vh;
     color: #e0e0e0;
-
+    overflow: hidden;
     
 }
 
